<resources>
    <string name="app_name">Parafia w Wielichowie</string>
    <string name="home_photo_description">Zdjęcie kościoła w Wielichowie</string>
    <string name="home_intencje_i_ogloszenia">Intencje i Ogłoszenia</string>
    <string name="home_kalndarium">Kalndarium</string>
    <string name="home_informacje_ogolne">Informacje ogólne</string>
    <string name="home_liturgia">Liturgia</string>
    <string name="home_niezbedniki">Niezbędniki</string>
    <string name="home_kontakt">Kontakt</string>
    <string name="ogloszenia_przykladowy_tekst"><![CDATA[<div style="text-align:justify; padding-right:25px"><p><strong>28 Niedziela zwykła 11 października 2020</strong></p>
<p align="left">&nbsp;</p>
<p><strong>1. <span style="text-decoration: underline;">W tym tygodniu w liturgii Kościoła wspominamy</span>:&nbsp; </strong></p>
<p>&nbsp;&nbsp; a) w poniedziałek – Rocznica Poświęcenia Bazyliki Archikatedralnej</p>
<p>&nbsp;&nbsp; b) we wtorek – bł. Honorata Koźmińskiego, pr.</p>
<p>&nbsp;&nbsp; c) w czwartek - św. Teresy od Jezusa, dz. i dK.</p>
<p>&nbsp;&nbsp; d) w piątek - św. Jadwigi Śląskiej,</p>
<p>&nbsp;&nbsp; e) w sobotę - św. Ignacego Antiocheńskiego, bp. i m.</p>
<p>&nbsp;</p>
<p>2. W piątek 16 października o godz. 19.30 będzie spowiedź święta dla młodzieży <br> &nbsp;&nbsp;&nbsp;&nbsp; bierzmowanej, ich rodziców i domowników</p>
<p>&nbsp;</p>
<p align="left">3. Za tydzień w niedzielę przed Mszą św. o godz. 9.00 różaniec prowadzi 7 RM z Wielichowa. <br> &nbsp;&nbsp;&nbsp; Nabożeństwa różańcowe w październiku wg wcześniej ustalonego programu.</p>
<p>&nbsp;&nbsp;&nbsp; Za tydzień przeżywać będziemy Niedzielę Misyjną, która rozpocznie jednocześnie <br> &nbsp;&nbsp;&nbsp; Tydzień Misyjny. Przed kościołami będzie zbiórka na Papieskie Dzieła Misyjne.</p>
<p>&nbsp;&nbsp;&nbsp; <span style="text-decoration: underline;">Przypominamy, że dziś zbieramy ofiary przeznaczone na „Dzieło Nowego Tysiąclecia</span>”.</p>
<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
<p>4. <span style="text-decoration: underline;">Wymienianki roczne i jednorazowe </span>można już składać w Biurze Parafialnym</p>
<p>&nbsp;&nbsp;&nbsp; &nbsp;<span style="text-decoration: underline;">Uwaga</span>!</p>
<p>&nbsp;&nbsp;&nbsp;&nbsp; Prosimy, by wymienianki jednorazowe, a także roczne napisać wyraźnie na kartkach <br> &nbsp;&nbsp;&nbsp;&nbsp; z zaznaczeniem miejscowości. Wysokość ofiary w wymieniankach rocznych - tak jak <br> &nbsp;&nbsp;&nbsp;&nbsp; w ubiegłych latach.</p>
<p>&nbsp;&nbsp;&nbsp;&nbsp; Wymienianki jednorazowe i roczne w Zielęcinie można składać u P. Katarzyny <br> &nbsp;&nbsp;&nbsp;&nbsp; Stachowskiej, a w Zieminie u Pana Sołtysa.</p>
<p>&nbsp;&nbsp;&nbsp;&nbsp; Wymienianku jednorazowe składamy tylko do końca października!</p>
<p>&nbsp;</p>
<p align="left">5. <span style="text-decoration: underline;">Zapowiedzi przedślubne:</span></p>
<p align="left">&nbsp;&nbsp;&nbsp; Meller Ewa&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; par. Grodzisk Wlkp.</p>
<p>&nbsp;&nbsp;&nbsp; Nowak Bartosz&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; par. Wielichowo&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; zap. II</p>
<p>&nbsp;</p>
<p>&nbsp;</p>
<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;Proboszcz</p>
<p>&nbsp;</p>
<p>&nbsp;&nbsp;</p>
<p>&nbsp;</p>
<p>&nbsp;</p>
<p>&nbsp;</p>
<p>&nbsp;</p>
<p>&nbsp;</p>
<p>&nbsp;</p>
<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
<p>&nbsp;</p></div>]]></string>
</resources>